spacing issues fixed index styles

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -123,7 +123,8 @@ line-height: normal;
     border-radius: 200px;
     background: #A9B06D;
     margin: auto;
-    margin-top: 200px;
+    margin-top: 130px;
+    margin-bottom: 130px;
   }
   
   .orb_1 {
@@ -139,8 +140,16 @@ line-height: normal;
     from { transform: scale(1); background: #A9B06D;}
          to { transform: scale(3); background: #ffffff;}
   }
-  
+  .index a {
+    color:#A9B06D;
+    text-decoration:none;
+  }
 
+  .index a:hover {
+    color: #ffffff;
+    text-decoration:underline;
+    
+  }
 /*--This Point Forward is Puzzle CSS Code--*/
                                     input[type="radio"]{
                                         display:none;
@@ -363,7 +372,7 @@ line-height: normal;
                                         --x:40em;
                                     }
                                     .winner{
-                                        font-family:arial;
+                                        font-family:manslava;
                                         color: #fff;
                                         text-align: center;
                                         font-size: 4vw;
@@ -373,7 +382,7 @@ line-height: normal;
                                         position:absolute;
                                         top:calc(50% - 1em);
                                         line-height: 2em;
-                                        background: red;
+                                        background: #001F21;
                                         transform:scale(0);
                                     }
                                     #a-up:checked ~ #a-left:checked ~ #b-up:checked ~ #b-center:checked ~ #c-up:checked ~ #c-right:checked ~ #d-middle:checked ~ #d-left:checked ~ #e-middle:checked ~ #e-center:checked ~ #f-middle:checked ~ #f-right:checked ~ #g-down:checked ~ #g-left:checked ~ #h-down:checked ~ #h-center:checked ~ .winner{
